// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContinueButton /> render() should render the Continue button as loading 1`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432"
  data-disabled="true"
  data-name="button"
  data-pending="true"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:rc:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
      <div
        aria-busy="true"
        aria-label="Loading..."
        class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
        role="status"
      >
        <div
          class="ui-buttonloader-indicator-eacb"
        />
      </div>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 2`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432"
  data-disabled="true"
  data-name="button"
  data-pending="true"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:re:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
      <div
        aria-busy="true"
        aria-label="Loading..."
        class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
        role="status"
      >
        <div
          class="ui-buttonloader-indicator-eacb"
        />
      </div>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 3`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432"
  data-disabled="true"
  data-name="button"
  data-pending="true"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:rg:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          I Have Saved My Codes
        </strong>
      </span>
      <div
        aria-busy="true"
        aria-label="Loading..."
        class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
        role="status"
      >
        <div
          class="ui-buttonloader-indicator-eacb"
        />
      </div>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 1`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
  data-disabled="true"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:r6:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 2`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
  data-disabled="true"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:r8:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 3`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
  data-disabled="true"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  disabled=""
  id="react-aria-:ra:"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          I Have Saved My Codes
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 1`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  id="react-aria-:r0:"
  tabindex="0"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 2`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  id="react-aria-:r2:"
  tabindex="0"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          Continue
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 3`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
  data-name="button"
  data-rac=""
  data-react-aria-pressable="true"
  id="react-aria-:r4:"
  tabindex="0"
  type="button"
>
  <div
    class="ui-button-surface-a432"
  >
    <span
      class="ui-button-content-a432"
    >
      <span
        class="typography-bold-md ui-text-text-d239"
        data-name="text"
        style="text-align: left; text-wrap: nowrap;"
      >
        <strong>
          I Have Saved My Codes
        </strong>
      </span>
    </span>
  </div>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 4`] = `null`;
